--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
           <p class='text-center'>
             Contact us at operator@futel.net, or dial 0 from any Futel phone. <br>
               IRC channel #futel on <a href="https://libera.chat/">liberachat</a>.
-             Site last updated {{ site.time | date: "%-m/%-d/%Y" }}.</small>
+             Site last updated {{ site.time | date: "%-m/%-d/%Y" }}.
           </p>
           <nav class="footer-nav">
             <p class="text-center">
