rudimentary blog layout

--- a/css/main.scss
+++ b/css/main.scss
@@ -28,7 +28,7 @@
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "bootstrap";
-
+@import "posts";
 
 .primary-header {
   text-align:center;
