--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@
             {% include header.html %}    
           </header>
           
-          <div role='main' class="site-content col-xs-12 col-md-10">
+          <div role='main' class="site-content post col-xs-12 col-md-10">
               {{ content }}  
           </div>
           
