--- a/css/main.scss
+++ b/css/main.scss
@@ -28,6 +28,7 @@
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "bootstrap";
+@import "pagination";
 @import "posts";
 
 .primary-header {
