--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,8 +11,10 @@
           <header class="primary-header col-xs-12 col-md-2">
             {% include header.html %}    
           </header>
-          
+
           <div role='main' class="site-content post col-xs-12 col-md-10">
+            <h2>{{ page.title }}</h2>
+            <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_string }}</time>
               {{ content }}  
           </div>
           
